--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://thadlubo.github.io/portfolio-website",
+  "homepage": "https://thadlubo.github.io/portfolio-website/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
